<resources>
    <string name="app_name">Cebanc Tortillas</string>
    <string name="txtNombre">Nombre:</string>
    <string name="txtDireccion">Dirección:</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="edtNombre">Introduzca su nombre</string>
    <string name="edtTelefono">Introduzca su telefono</string>
    <string name="edtDireccion">Introduzca su dirección</string>
    <string name="btnSalir">Salir</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnLlamar">Llamar</string>
    <string name="btnInfo">Información</string>
    <string name="btnInicio">Inicio</string>
    <string name="btnAñadir">Añadir</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnCalcular">Calcular precio</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="btnQuitar">X</string>
    <string name="editeSuPedido">---Edite su pedido---</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
