<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="290dp"
        android:layout_height="176dp"
        tools:context=".FirstMapActivity"
        android:layout_above="@+id/btnInicio"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:text="@string/btnInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInicio"
        android:layout_alignBaseline="@+id/btnInfo"
        android:layout_alignBottom="@+id/btnInfo"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp" />

    <TextView
        android:text="TORTILLAS CEBANC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_above="@+id/btnMantenimiento"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

    <Button
        android:text="Mantenimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMantenimiento"
        android:layout_alignBaseline="@+id/btnLlamar"
        android:layout_alignBottom="@+id/btnLlamar"
        android:layout_alignRight="@+id/btnInicio"
        android:layout_alignEnd="@+id/btnInicio" />

    <Button
        android:text="@string/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:id="@+id/btnInfo"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnLlamar"
        android:layout_alignStart="@+id/btnLlamar" />

    <Button
        android:text="@string/btnLlamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:id="@+id/btnLlamar"
        android:layout_above="@+id/map"
        android:layout_alignLeft="@+id/map"
        android:layout_alignStart="@+id/map" />


</RelativeLayout>