<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/spBebida"
        android:layout_weight="1"
        android:layout_marginTop="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtCantidad2" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPrecio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp">

            <Button
                android:text="@string/btnAñadir"
                android:layout_height="wrap_content"
                android:id="@+id/btnAñadir2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="50dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:text="@string/btnSalir"
                android:layout_height="wrap_content"
                android:id="@+id/btnSalir2"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="-21dp" />

            <Button
                android:text="@string/btnSiguiente"
                android:layout_height="wrap_content"
                android:id="@+id/btnSiguiente3"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="-20dp" />

        </TableRow>

    </TableLayout>

</LinearLayout>
