<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Spinner
                android:layout_width="match_parent"
                android:id="@+id/spTamaño"
                android:layout_weight="1.00"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:id="@+id/txtTamaño"
                android:text="0€" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:id="@+id/spHuevo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:id="@+id/txtHuevo"
                android:text="0€" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:id="@+id/spTipo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:id="@+id/txtTipo"
                android:text="0€" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edtCantidad"
                    android:layout_marginLeft="17dp"
                    android:text="1" />

                <TextView
                    android:text="0€"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtCantidadTot" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/btnCalcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCalcular"
                    android:elevation="1dp" />

                <Button
                    android:text="@string/btnAñadir"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnAñadir" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/btnSalir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btnSalir" />

                <Button
                    android:text="@string/btnSiguiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btnSiguiente" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
